Eureka server setup complected.